# s2-msi-raw-generator

./: .env.example  .gitignore  .gitlab-ci.yml  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.devcontainer/scripts/: install-rclone.sh  (+6 more)
data/: README.md
docs/: cidl.md  conf.py  djf.md  icd.md  index.md  index.rst  ird.md  license.md  qr.md  risk-register.md  scf.md  sdp.md  showcase.md  spa-plan.md  srevp.md  srf.md  srn.md  srs.md  sss.md  sum.md
notebooks/: compare_real_l0.ipynb  compare_synthetic_l0.ipynb  data_inventory.ipynb  input_dataset_check.ipynb  inspect_products.ipynb  pipeline_walkthrough.ipynb  reverse_l1b_compare.ipynb  run_pipeline.ipynb
s2_e2es/: __init__.py  adf.py  adf_writer.py  calibration.py  forward_radiometric_atbd.py  gipp.py  io.py  isp.py  l0product.py  reverse.py  sensor.py
s2_msi_raw_generator/: __init__.py  _fsutil.py  _parallel.py  _zarrio.py  adf.py  adf_writer.py  caldb.py  calibration.py  ccsds122.py  datation.py  env.py  forward_radiometric_atbd.py  gipp.py  import_l0.py  inventory.py  io.py  isp.py  l0product.py  metadata.py  naming.py  quality.py  quality_report.py  quicklook.py  reverse.py  s3fetch.py  sad.py  sensor.py
scripts/: build_cal_db.py  demo_build_l0.py  demo_calibration.py  demo_reverse_real.py  derive_prnu_dark.py  result_band_stages.py  reverse_compare_figure.py  roundtrip_real_l1a.py  run_e2e_l0_to_l1b.py  run_e2e_real_l1a.py  run_pipeline.py  save_images.py  validate_esa_nuc.py
tests/: conftest.py  test_adf_writer.py  test_cal_mode.py  test_calibration.py  test_ccsds122.py  test_datation.py  test_e2e_l1b.py  test_esa_adf_data.py  test_gipp.py  test_import_l0.py  test_inc3_steps.py  test_integration.py  test_inventory.py  test_isp.py  test_isp_packetize.py  test_l0_handoff.py  test_l0product.py  test_naming.py  test_parallel_write.py  test_quality.py  test_quality_report.py  test_quicklook.py  test_real_data.py  test_real_e2e_driver.py  test_reverse.py  test_reverse_l1b.py  test_roundtrip_atbd.py  test_s2_l1b_e2e_driver.py  test_s3fetch.py  test_sad.py
(+119 files in other folders)
