[project]
name = "s2_msi_raw_generator"
version = "0.3.0"
description = "Sentinel-2 MSI Synthetic Raw Data Generator — reverse E2ES degrading S2 L1B back to Synthetic L0 RAW"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = ["numpy>=1.26"]

[project.optional-dependencies]
# Lightweight reader for EOPF L1A/L1B Zarr products (no full eopf needed).
read = ["zarr>=3"]
# EOPF CPM for writing spec-compliant L0 EOProducts + processor round-trip (heavy; SDE runner).
eopf = ["eopf==2.8.1"]
dev = ["pytest>=8", "zarr>=3"]
# Sphinx documentation site (GitLab Pages).
docs = [
    "sphinx>=7",
    "myst-parser>=2",
    "linkify-it-py>=2",
    "sphinx-book-theme>=1.1",
    "sphinxcontrib-apidoc>=0.5",
    "sphinx-autodoc-typehints>=2",
    "sphinxcontrib-mermaid>=0.9",
]

[build-system]
requires = ["flit_core>=3.9"]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]
